--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,18 +1,18 @@
-name: Build Angular App
+name: Build and Deploy to IIS
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.19.0'
@@ -20,33 +20,36 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Build Angular app
+      - name: Build Angular App
         run: npm run build
 
-      - name: Deploy to build branch
+      - name: Push to build branch
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: build
           folder: dist/angular-conduit
           clean: true
 
-  notify-server:
-    runs-on: ubuntu-latest
-    needs: build  # Waits for the 'build' job to finish
+  deploy-to-iis:
+    needs: build-and-push
+    runs-on: [self-hosted, windows, iis, angular]  # your self-hosted runner tags
 
     steps:
-      - name: Checkout repo
+      - name: Checkout build branch
         uses: actions/checkout@v3
         with:
-          ref: build  # ✅ checkout the build branch
+          ref: build  # 👈 this checks out the pushed build branch
 
-      - name: Get latest commit hash
-        id: commit
-        run: echo "commit_hash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-
-      - name: POST to FastAPI deploy endpoint
+      - name: Backup current production (optional)
         run: |
-          curl -X POST https://solid-primate-strangely.ngrok-free.app/deploy \
-            -H "Authorization: Bearer supersecrettoken" \
-            -H "Content-Type: application/json" \
-            -d "{\"commit_hash\": \"${{ steps.commit.outputs.commit_hash }}\"}"
+          $timestamp = Get-Date -Format "yyyyMMdd-HHmmss"
+          $backupPath = "D:\user\Tanny\PRODUCTION-backup-$timestamp"
+          Copy-Item -Path "D:\user\Tanny\PRODUCTION" -Destination $backupPath -Recurse -Force
+
+      - name: Replace production with new build
+        run: |
+          Remove-Item -Path "D:\user\Tanny\PRODUCTION\*" -Recurse -Force
+          Copy-Item -Path ".\*" -Destination "D:\user\Tanny\PRODUCTION" -Recurse -Force
+
+      - name: Restart IIS (optional)
+        run: iisreset
