--- a/package.json
+++ b/package.json
@@ -24,26 +24,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.0",
-    "@angular/common": "20.0.0",
-    "@angular/compiler": "20.0.0",
-    "@angular/core": "20.0.0",
-    "@angular/forms": "20.0.0",
-    "@angular/platform-browser": "20.0.0",
-    "@angular/platform-browser-dynamic": "20.0.0",
-    "@angular/router": "20.0.0",
+    "@angular/animations": "20.3.9",
+    "@angular/common": "20.3.9",
+    "@angular/compiler": "20.3.9",
+    "@angular/core": "20.3.9",
+    "@angular/forms": "20.3.9",
+    "@angular/platform-browser": "20.3.9",
+    "@angular/platform-browser-dynamic": "20.3.9",
+    "@angular/router": "20.3.9",
     "@rx-angular/cdk": "20.0.0",
     "@rx-angular/template": "20.0.0",
-    "marked": "^11.1.0",
+    "marked": "^16.4.1",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "^1.22.4",
-    "@angular/build": "^20.0.0",
-    "@angular/cli": "^20.0.0",
-    "@angular/compiler-cli": "20.0.0",
+    "@angular/build": "20.3.9",
+    "@angular/cli": "20.3.9",
+    "@angular/compiler-cli": "20.3.9",
     "@playwright/test": "^1.56.1",
     "@types/marked": "^6.0.0",
     "@vitest/ui": "^3.2.4",
@@ -52,7 +52,7 @@
     "lint-staged": "^16.1.2",
     "playwright": "^1.56.1",
     "prettier": "^3.1.1",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.3",
     "vitest": "^3.2.4"
   },
   "lint-staged": {
